<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRestaurantActivity">

    <EditText
        android:id="@+id/et_RestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/inputRestaurantName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_RestaurantPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/inputRestaurantPhone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_RestaurantName" />

    <Button
        android:id="@+id/btn_AddRestaurantSubmit"
        android:layout_width="204dp"
        android:layout_height="35dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="12dp"
        android:background="#00E2FF"
        android:text="@string/buttonSubmit"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_RestaurantPhone" />

    <TextView
        android:id="@+id/tv_Position"
        android:layout_width="243dp"
        android:layout_height="34dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="19dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_AddRestaurantSubmit" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapAddRestaurant"
        android:layout_width="415dp"
        android:layout_height="310dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Position"
        tools:ignore="SpeakableTextPresentCheck" />

    <fragment
        android:id="@+id/map2"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="416dp"
        android:layout_height="308dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Position" />

</androidx.constraintlayout.widget.ConstraintLayout>